--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             </div>
             
             <div class="logo-container">
-                <img src="https://imgur.com/a/T7UqGRx" alt="Simply Pressure RP" class="logo" onerror="this.src='https://via.placeholder.com/220x220/1a73e8/ffffff?text=SPRP'">
+                <img src="logo.jpg" alt="Simply Pressure RP" class="logo" onerror="this.src='https://via.placeholder.com/220x220/1a73e8/ffffff?text=SPRP'">
             </div>
         </div>
         
